--- a/sociaBook_Project/apps/core/templates/core/base.html
+++ b/sociaBook_Project/apps/core/templates/core/base.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sociaBook</title>
 
+
+
+    
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <nav class="navbar is-info" role = "navigation">
@@ -25,8 +30,15 @@
             <div class="navbar-end">
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a href="{% url 'signup'%}"  class="button is-success"><strong>SIGNUP</strong></a>
-                        <a   class="button is-light">LOGIN</a>
+                        {% if request.user.is_authenticated %}
+                            <a href="{% url 'logout' %}" class="button is-danger">LOGOUT</a>
+                        
+                        {% else %}
+
+                        <a href="{% url 'sign_up'%}"  class="button is-success"><strong>SIGNUP</strong></a>
+                        <a href="{% url 'login'%}" class="button is-light">LOGIN</a>
+
+                        {% endif %}
                     </div>
                 </div>
             </div>
