--- a/sociaBook_Project/apps/core/templates/core/login.html
+++ b/sociaBook_Project/apps/core/templates/core/login.html
@@ -1,11 +1,112 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-    <div class="container">
-        <div class="columns">
-            <div class="column is-12">
-                <h1>LOgin Page</h1>
-            </div>
-        </div>
+
+
+<style>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+}
+
+.container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form {
+  width: 400px;
+  height: auto;
+  padding: 35px;
+  border-radius: 20px;
+  box-shadow: 0px -6px 10px rgb(255, 255, 255), 0px 4px 15px rgba(0, 0, 0, 0.15);
+}
+
+.form h1 {
+  text-align: center;
+  margin-bottom: 40px;
+  color: #868686;
+  letter-spacing: 3px;
+}
+
+.form form label {
+  margin: 10px 0 0 20px;
+  font-weight: 300;
+  color: #868686;
+}
+
+.form form label#forgotpwd {
+  margin: 20px;
+  display: block;
+  text-align: center;
+  font-size: 18px;
+}
+
+.form form label#forgotpwd a {
+  font-weight: 600;
+  color: #868686;
+}
+
+.form form input[type="text"],
+.form form input[type="password"],
+.form form input[type="button"] {
+  width: 100%;
+  padding: 20px;
+  margin: 20px 0;
+  border-radius: 50px;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  box-shadow: 0px -6px 10px white, 0px 4px 15px rgba(0, 0, 0, 0.15);
+  background: transparent;
+  color: #868686;
+}
+
+.form form input:focus {
+  box-shadow: inset 0px -6px 10px white, inset 0px 4px 15px rgba(0, 0, 0, 0.15);
+}
+
+.form form input[type="button"] {
+  margin: 40px 0 0 0;
+  font-size: 24px;
+  font-weight: 400;
+}
+
+.form form input[type="button"]:active {
+  box-shadow: inset 0px -6px 10px white, inset 0px 4px 15px rgba(0, 0, 0, 0.15);
+}
+
+
+</style>
+
+<div class="container">
+    <div class="form">
+      <form method="POST" action=".">
+          
+        {% csrf_token %}
+        <h1>Login</h1>
+        <label>Username</label>
+        <input type="text" name="" id="" placeholder="Username" />
+        <label>Password</label>
+        <input type="password" name="" id="" placeholder="Password" />
+        <!-- <input type="submit" value="Login" /> -->
+        
+        <button class="button is-success" type="submit" style="left: 37%;"> LOGIN </button>
+        <label id="forgotpwd">Forgot Password? <a href="#">Click Here</a></label>
+      </form>
     </div>
+  </div>
+
+
 {% endblock %}
